fix nav bar on safari

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,12 @@
 @import "bootstrap/scss/bootstrap";
 
 
+.nav-item {
+    
+display: webkit-box;
+
+}
+
 /* footer */
 
 html,
